Khushboo Org/force-app/main/default/objects/User/fields/Contacts_Created__c.field-meta.xml
<CustomField>
    <fullName>Contacts_Created__c</fullName>
    <label>Contacts Created</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>