Khushboo Org/force-app/main/default/objects/User/fields/Salary__c.field-meta.xml
<CustomField>
    <fullName>Salary__c</fullName>
    <label>Salary</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>